test/sema/typeck/binop/add-assign-no-impl.dora
struct MyInt(Int)
fn f(mut x: MyInt, y: MyInt): MyInt {
    x += y;
    x
}
